--- a/goods-list.html
+++ b/goods-list.html
@@ -116,13 +116,14 @@
 					<thead>
 						<tr class="text-c">
 <!--							<th width="40"><input name="" type="checkbox" value=""></th>-->
-							<th width="80">货物名称</th>
+							<th width="50">货物名称</th>
 							<th width="100">分类</th>
 							<th width="100">封面</th>
-							<th width="100">货物单价</th>
-							<th width="100">货物活动价</th>
-							<th width="100">货物总数量</th>
-							<th width="100">货物剩余数量</th>
+							<th width="100">标签（标签名|单价|折扣价|总量|库存）</th>
+<!--							<th width="100">货物单价</th>-->
+<!--							<th width="100">货物活动价</th>-->
+<!--							<th width="100">货物总数量</th>-->
+<!--							<th width="100">货物剩余数量</th>-->
 							<th width="60">发布时间</th>
 <!--							<th width="150">Tags</th>-->
 <!--							<th width="100">2020-09-11 00:00:00</th>-->
@@ -192,15 +193,29 @@ $(function () {
 						mystr = mystr + "<td>"+dataArray[i].name+"</td>";
 						mystr = mystr + "<td>"+dataArray[i].classifyName+"</td>";
 						mystr = mystr + "<td><img style='width: 105px;height: 55px' src=\""+ apiHeader + dataArray[i].headPic + "\"/></td>";//<td><a href="javascript:;" onClick="picture_edit('图库编辑','picture-show.html','10001')"><img width="100" class="picture-thumb" src="pic/200x150.jpg"></a></td>
-						mystr = mystr + "<td>"+dataArray[i].price+"</td>";
-						if(dataArray[i].discountPrice == null){
-							mystr = mystr + "<td>未设置</td>";
-						}else{
-							mystr = mystr + "<td>"+dataArray[i].discountPrice+"</td>";
+						var option = dataArray[i].goodsOptionList;
+						var optionText = "";
+						for(var k=0;k<option.length;k++){
+							optionText = optionText + "标签" + (k + 1) + ": ";
+							if(k > 0){
+								optionText = optionText + "\r\n";
+							}
+							var optionDiscountPrice = option[k].discountPrice;
+							if(optionDiscountPrice == null){
+								optionDiscountPrice = "未设置";
+							}
+							optionText = optionText + option[k].title + " | "+option[k].price+ " | "+ optionDiscountPrice + " | " + option[k].num + " | " + option[k].surplusNum + "</br>";
 						}
-						//+ dataArray[i].unit +" +
-						mystr = mystr + "<td>"+dataArray[i].num+dataArray[i].unit+"</td>";
-						mystr = mystr + "<td>"+dataArray[i].surplusNum + dataArray[i].unit + "</td>";
+						mystr = mystr + "<td>"+ optionText + "</td>";
+						// mystr = mystr + "<td>"+dataArray[i].price+"</td>";
+						// if(dataArray[i].discountPrice == null){
+						// 	mystr = mystr + "<td>未设置</td>";
+						// }else{
+						// 	mystr = mystr + "<td>"+dataArray[i].discountPrice+"</td>";
+						// }
+						// //+ dataArray[i].unit +" +
+						// mystr = mystr + "<td>"+dataArray[i].num+dataArray[i].unit+"</td>";
+						// mystr = mystr + "<td>"+dataArray[i].surplusNum + dataArray[i].unit + "</td>";
 						mystr = mystr + "<td>"+ dataArray[i].createTime+"</td>";
 						// mystr = mystr + "<td>"+ dataArray[i].createTime+"</td>";
 						if (dataArray[i].status == 1) {
@@ -287,22 +302,38 @@ function queryGoodsList(name,startTime,endTime,page,pageSize,classifyQueryName) 
 						mystr = mystr + "<td>"+dataArray[i].name+"</td>";
 						mystr = mystr + "<td>"+dataArray[i].classifyName+"</td>";
 						mystr = mystr + "<td><img style='width: 105px;height: 55px' src=\"" + apiHeader + dataArray[i].headPic + "\"/></td>";//<td><a href="javascript:;" onClick="picture_edit('图库编辑','picture-show.html','10001')"><img width="100" class="picture-thumb" src="pic/200x150.jpg"></a></td>
-						mystr = mystr + "<td>"+dataArray[i].price+"</td>";
-						if(dataArray[i].discountPrice == null){
-							mystr = mystr + "<td>未设置</td>";
-						}else{
-							mystr = mystr + "<td>"+dataArray[i].discountPrice+"</td>";
+						var option = dataArray[i].goodsOptionList;
+						var optionText = "";
+						for(var k=0;k<option.length;k++){
+							optionText = optionText + "标签" + (k + 1) + ": ";
+							if(k > 0){
+								optionText = optionText + "\r\n";
+							}
+							var optionDiscountPrice = option[k].discountPrice;
+							if(optionDiscountPrice == null){
+								optionDiscountPrice = "未设置";
+							}
+
+
+							optionText = optionText + option[k].title + " | "+option[k].price+ " | "+ optionDiscountPrice + " | " + option[k].num + " | " + option[k].surplusNum + "</br>";
 						}
-						mystr = mystr + "<td>"+dataArray[i].num+dataArray[i].unit+"</td>";
-						mystr = mystr + "<td>"+dataArray[i].surplusNum+dataArray[i].unit+"</td>";
+						mystr = mystr + "<td>"+ optionText + "</td>";
+						// mystr = mystr + "<td>"+dataArray[i].price+"</td>";
+						// if(dataArray[i].discountPrice == null){
+						// 	mystr = mystr + "<td>未设置</td>";
+						// }else{
+						// 	mystr = mystr + "<td>"+dataArray[i].discountPrice+"</td>";
+						// }
+						// mystr = mystr + "<td>"+dataArray[i].num+dataArray[i].unit+"</td>";
+						// mystr = mystr + "<td>"+dataArray[i].surplusNum+dataArray[i].unit+"</td>";
 						mystr = mystr + "<td>"+ dataArray[i].createTime+"</td>";
 						if (dataArray[i].status == 1) {
 							mystr = mystr + "<td class=\"td-status\"><span class=\"label label-success radius\">已发布</span></td>";
-							mystr = mystr + "<td class=\"td-manage\"><a style=\"text-decoration:none\" onClick=\"picture_stop(this,'10001')\" href=\"javascript:;\" title=\"下架\"><i class=\"Hui-iconfont\">&#xe6de;</i></a> <a style=\"text-decoration:none\" class=\"ml-5\" onClick=\"picture_edit('货物编辑','goods-edit.html','10001')\" href=\"javascript:;\" title=\"编辑\"><i class=\"Hui-iconfont\">&#xe6df;</i></a> <a style=\"text-decoration:none\" class=\"ml-5\" onClick=\"picture_del(this,'10001')\" href=\"javascript:;\" title=\"删除\"><i class=\"Hui-iconfont\">&#xe6e2;</i></a><input type=\"text\" value=\""+dataArray[i].id+"\" id=\"idValue\" hidden /></td>";
+							mystr = mystr + "<td class=\"td-manage\"><a style=\"text-decoration:none\" onClick=\"picture_stop(this,'10001')\" href=\"javascript:;\" title=\"下架\"><i class=\"Hui-iconfont\">&#xe6de;</i></a> <a style=\"text-decoration:none\" class=\"ml-5\" onClick=\"picture_edit('货物编辑','goods-edit.html?id="+dataArray[i].id+"','10001')\" href=\"javascript:;\" title=\"编辑\"><i class=\"Hui-iconfont\">&#xe6df;</i></a> <a style=\"text-decoration:none\" class=\"ml-5\" onClick=\"picture_del(this,'10001')\" href=\"javascript:;\" title=\"删除\"><i class=\"Hui-iconfont\">&#xe6e2;</i></a><input type=\"text\" value=\""+dataArray[i].id+"\" id=\"idValue\" hidden /></td>";
 						} else {
 							// mystr = mystr + "<td class=\"td-status\"><span class=\"label label-danger radius\">未上架</span></td>";
 							mystr = mystr + "<td class=\"td-status\"><span class=\"label label-defaunt radius\">已下架</span></td>";
-							mystr = mystr + "<td class=\"td-manage\"><a style=\"text-decoration:none\" onclick=\"picture_start(this,id)\" href=\"javascript:;\" title=\"发布\"><i class=\"Hui-iconfont\"></i></a> <a style=\"text-decoration:none\" class=\"ml-5\" onclick=\"picture_edit('货物编辑','goods-edit.html','10001')\" href=\"javascript:;\" title=\"编辑\"><i class=\"Hui-iconfont\"></i></a> <a style=\"text-decoration:none\" class=\"ml-5\" onclick=\"picture_del(this,'10001')\" href=\"javascript:;\" title=\"删除\"><i class=\"Hui-iconfont\"></i></a><input type=\"text\" value=\""+dataArray[i].id+"\" id=\"idValue\" hidden /></td>";
+							mystr = mystr + "<td class=\"td-manage\"><a style=\"text-decoration:none\" onclick=\"picture_start(this,id)\" href=\"javascript:;\" title=\"发布\"><i class=\"Hui-iconfont\"></i></a> <a style=\"text-decoration:none\" class=\"ml-5\" onclick=\"picture_edit('货物编辑','goods-edit.html?id="+dataArray[i].id+"','10001')\" href=\"javascript:;\" title=\"编辑\"><i class=\"Hui-iconfont\"></i></a> <a style=\"text-decoration:none\" class=\"ml-5\" onclick=\"picture_del(this,'10001')\" href=\"javascript:;\" title=\"删除\"><i class=\"Hui-iconfont\"></i></a><input type=\"text\" value=\""+dataArray[i].id+"\" id=\"idValue\" hidden /></td>";
 						}
 						// mystr.append("<td> <button type=\"submit\">删除</button></a></td>");
 						// mystr = mystr + "<td class=\"td-manage\"><a style=\"text-decoration:none\" onClick=\"picture_stop(this,'10001')\" href=\"javascript:;\" title=\"下架\"><i class=\"Hui-iconfont\">&#xe6de;</i></a> <a style=\"text-decoration:none\" class=\"ml-5\" onClick=\"picture_edit('图库编辑','picture-add.html','10001')\" href=\"javascript:;\" title=\"编辑\"><i class=\"Hui-iconfont\">&#xe6df;</i></a> <a style=\"text-decoration:none\" class=\"ml-5\" onClick=\"picture_del(this,'10001')\" href=\"javascript:;\" title=\"删除\"><i class=\"Hui-iconfont\">&#xe6e2;</i></a></td>";
